open document in new page
Former-commit-id: 3773f9d0963b7cd2df0e8969eb1493f5b0eb6bac

--- a/templates/documents/show.html
+++ b/templates/documents/show.html
@@ -45,7 +45,7 @@
                         <%= attachment.title%> 
                     </span>
                     <span class="page-meta pull-right">
-                       <a href=" https://docs.google.com/file/d/<%=attachment.resource_id%>/edit?usp=drive_web" class="btn-link addAnotherPhone">
+                       <a href=" https://docs.google.com/file/d/<%=attachment.resource_id%>/edit?usp=drive_web" class="btn-link addAnotherPhone" target="new">
                           <img src="/static/img/drive_icon.png" width="16">
                           Open with Google Drive
                         </a>
