adding event page
Former-commit-id: 51fe4bef54c2febe00bc788d4f14f2bc37a3badd

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -195,11 +195,11 @@
                         <br>
                     </div>
                     
-                    <div class="col-lg-2 hidden-xs hidden-sm hidden-md">
+                   <!-- <div class="col-lg-2 hidden-xs hidden-sm hidden-md">
                         <!-- <h5>Grow your business easily</h5>
                         <p>Stop wasting time struggling  with papers, spreadsheets and emails. Focus on growing your business..</p>
                         <img src="/static/welcome/img/arrow-left.png" alt=""> -->
-                    </div> 
+                   <!--  </div> -->
                     <div class="col-lg-8">
                         <img class="img-responsive" src="/static/welcome/img/app-bg1.png" alt="">
                         <!--<h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
