--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -15,7 +15,7 @@
       <a href="<%=uri%>" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="Back to Accounts">
         <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="/static/img/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
       </a>     
-      {{_("Documents")}} > 
+      {{_("Events")}} > 
      </h2>
   </div>
 </div>
@@ -41,7 +41,7 @@
       <div class="col-md-12 showPage taskShowHead margin-bottom-15">
           <div class="row">
             <div class="col-md-12">
-                    <span editable-text="event.title" ng-model="event.title" onbeforesave="inlineUpdateTask()" class="documentTitle" >
+                    <span editable-text="event.title" ng-model="event.title" onbeforesave="inlineUpdateEvent()" class="documentTitle" >
                         <%= event.title%> 
                     </span>
                     <span class="page-meta pull-right">
@@ -61,9 +61,9 @@
                 <a href="" class="name"><%= event.created_by.display_name%></a>
                 <span class="datetime">at <%=event.updated_at | date:'yyyy-MM-dd - HH:mm:ss '%></span>
                <ul class="list-unstyled ">
-                 <li ng-show="task.tags" class="inline-tags">Tags:</li>
-                 <li ng-repeat="tag in task.tags" class="inline-tags">
-                   <a  href="/#/search/type:Task tags:<%=tag.id%>">
+                 <li ng-show="event.tags" class="inline-tags">Tags:</li>
+                 <li ng-repeat="tag in event.tags" class="inline-tags">
+                   <a  href="/#/search/type:event tags:<%=tag.id%>">
                         <span class="pull-left task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
                           <%= tag.name %>
                         </span>
@@ -74,9 +74,50 @@
               
         </div>
       </div>
-      <div class="col-md-12 showPage margin-bottom-15 "> 
-         <iframe class="cusIframe" src="https://docs.google.com/file/d/<%=attachment.resource_id%>/preview"  width="100%" class="col-md-12" height="300"></iframe> 
-      </div>
+      <div class="row slimForm">
+          <div class="col-md-6">
+            <div class="news-blocks blank-card blank-card-yellow newsCard">
+              <h3>Event Informations</h3>
+              <div class="news-block-tags event-block-title">
+                <strong>Description</strong>
+              </div>
+              <div class="form-group row">
+                    <div class="col-md-12">
+                      <textarea id="noteBody" ng-blur="updateEvent({'id':event.id,'description':event.description})" class="form-control ng-pristine ng-valid" rows="3" ng-model="event.description"></textarea>
+                    </div>
+              </div>
+              <div class="news-block-tags event-block-title">
+                <strong>Location</strong>
+              </div>
+              <div class="form-group row">
+                    <div class="col-md-12">
+                      <input id="noteBody" ng-blur="updateEvent({'id':event.id,'where':event.where})" class="form-control ng-pristine ng-valid" rows="3" ng-model="event.where">
+                    </div>
+              </div>
+              <div class="news-block-tags  event-block-title">
+                <strong>Schedule</strong>
+              </div>
+              <div class="col-md-5 event-schedule">
+                <datetimepick ng-model='event.starts_at'  label-format='EEEE, MMMM d, yyyy'></datetimepick>
+              </div>
+              <div class="col-md-2 event-schedule">
+                <i class="fa fa-chevron-right"></i>
+              </div>
+              <div class="col-md-5 event-schedule">
+              <datetimepick ng-model='event.ends_at'  label-format='EEEE, MMMM d, yyyy'></datetimepick>
+              </div>
+              <div class="clearfix margin-bottom-15"></div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="right-col">
+              <div class="news-blocks blank-card blank-card-yellow newsCard">
+                <div id="gmap_canvas" style="width:100%;height:325px;"></div>
+              </div>
+
+            </div>
+          </div>
+    </div>
             <div class=" col-md-12">
                   <div class="row">
         <div class="col-md-12 commentsShow">
