added new landing page
Former-commit-id: f86c169db6e100cbf00867b0c500d24ff68097ae [formerly d78a24313ce6fb412bdb898748f0e185a16d1b6b]
Former-commit-id: 107b0935f2440872bccfbdf073657683b5462b9e

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -42,13 +42,13 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="/welcome/">
-                        <img src="/static/welcome/img/iogrow_logo.png" style="margin-top: -28px;">
+                        <img src="/static/welcome/img/iogrow_logo.png" style="margin-top: -28px;padding-top: 10px;">
                     </a>
                 </div>
 
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav cl-effect-13">
-                        <li class="active"><a href="#home" class="smoothScroll">Home</a></li>
+                        <li class="active"><a href="#home" class="smoothScroll" <a href="#home" class="smoothScroll">Home</a></li>
                         <li><a href="#features" class="smoothScroll">Features</a></li>
                         <li><a href="#pricing" class="smoothScroll">Pricing</a></li>
                         <li><a href="#contact" class="smoothScroll">Contact</a></li>
@@ -222,22 +222,23 @@
                 <div class="row text-center">
                     
                     <div class="col-lg-3">
-                        <licon class="li_user"></licon>
+                        <img src="/static/welcome/img/customers.png" style="margin-top: -28px;margin-bottom: -23px;">
                         <h3>Connect with Customers</h3>
                         <p>Your customers has that beautiful card that shows your common notes, tasks, contact details such as phone number, email, address, <a href="http://iogrow.nerdroid.com/"> and much more.</a></p>
                     </div>
                     <div class="col-lg-3">
-                        <licon class="li_like"></licon>
+                        <img src="/static/welcome/img/easy.png" style="margin-top: -28px;margin-bottom: -23px;">
                         <h3>Easy to Use</h3>
                         <p>Using io.Grow, enjoy the best CRM experience, with clean and fast interfaces that eliminate the complexity from CRM platforms.</p>
                     </div>
                     <div class="col-lg-3">
-                        <licon class="li_data"></licon>
+                        <img src="/static/welcome/img/scalable.png" style="margin-top: -28px;margin-bottom: -23px;">
                         <h3>Scalable</h3>
                         <p>io.Grow runs on the same infrastructure that allows Google to return billions of search results in milliseconds.</p>
                     </div>
                     <div class="col-lg-3">
-                        <licon class="li_cloud"></licon>
+                        <img src="/static/welcome/img/cloud.png" style="margin-top: -28px;margin-bottom: -23px;">
+
                         <h3>CRM on Google Apps</h3>
                         <p>Ease your life by using powerful apps such as Google Drive, Docs, Contacts, Calendar or Gmail.</p>
                     </div>
