--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -55,7 +55,7 @@
                         </a>
                       </span>
                       <br>
-                      <span  style="">
+                      <span ng-show="opportunity.contact.firstname "  style="">
                         Contact name:
 
                         <a class="tag ng-binding" href="/#/contacts/show/<%= opportunity.contact.id %>">
