updating welcome page
Former-commit-id: 0df59b5fd248b42142902d9371b06096c82e8646 [formerly c8971728357caf41465d20a93cd03d9f6fd2f64f]
Former-commit-id: b309e9778603f3a568ad5ce09f4b7e10311ae1f4

--- a/static/welcome/css/style.css
+++ b/static/welcome/css/style.css
@@ -170,7 +170,7 @@ a:after {
 /* Header Wrap */
 
 #headerwrap {
-	background: url("../img/header-bg.png") no-repeat center top;
+	background: url("../img/header-bg.jpg") no-repeat center top;
 	background-size: cover;
 	padding-top: 80px;
 }
