--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -53,7 +53,7 @@
                 </form>
                 <div>
                   <div class="newTask-meta pull-right">
-                    <datetimepick icon-class='fa fa-bell-o' label-format='MMM d, h:mm a' ng-model='newTask.reminder' class="new-task-reminder pull-right"></datetimepick>
+                    <datetimepick icon-class='fa fa-bell-o' label-format='MMM d, h:mm a' ng-model='newTask.reminder' class="new-task-reminder pull-right" placeholder=""></datetimepick>
                      <datetimepick ng-model='newTask.due' class="new-task-date pull-right" label-format='MMM d, h:mm a'></datetimepick>
                   </div>  
                 </div>
@@ -493,12 +493,13 @@
                 </div>
                 <div class="portlet-body">
                 <ul class="list-group tags-list">
-                  <li  ng-repeat="tag_item in tags" class="list-group-item tags-list-item" ng-click="selectTag(tag_item,$index,$event)"  >
+                  <li  ng-repeat="tag_item in tags" class="list-group-item tags-list-item">
                   <div class="row">
                     <span  draggable ng-drag="dragTag(tag_item)" style="background-color:<%=tag_item.color%>;color:idealTextColor(<%=tag_item.color%>);" class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"><%= tag_item.name %> </span>
-                    <span class="pull-right tag-checked" ng-show="selected_tags.indexOf(tag_item) != -1">
+                    <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
+                   <!-- <span class="pull-right tag-checked" ng-show="selected_tags.indexOf(tag_item) != -1">
                       <i class="fa fa-check-circle-o" style="color:idealTextColor(<%=tag_item.color%>);"></i>  
-                    </span>
+                    </span>-->
                     
                     <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
                       <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
