added features list
Former-commit-id: d52e3c26a63000e35ac390086b160310fb6f6a9c [formerly 76ba0fa22c1b7ebac6499ef7b03543a859cd932f]
Former-commit-id: 6c3082e96399eca8618224d225228a290924c9d1

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -282,7 +282,6 @@
                         <div class="accordion ac" id="accordion2">
                             <div class="accordion-group active">
                                 <div class="accordion-heading">
-                                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
                                     <i class="fa fa-cloud"></i> Collaborate in the cloud
                                     </a>
                                 </div><!-- /accordion-heading -->
@@ -296,8 +295,7 @@
 
                             <div class="accordion-group">
                                 <div class="accordion-heading">
-                                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                                    <i class="fa fa-mail-forward"></i> Get started fast
+                                    <i class=""></i> Here start the secound paragraph>
                                     </a>
                                 </div>
                                 <div id="collapseTwo" class="accordion-body collapse">
@@ -310,7 +308,6 @@
 
                             <div class="accordion-group">
                                 <div class="accordion-heading">
-                                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
                                     <i class="fa fa-bar-chart-o"></i> Deliver real time insights
                                     </a>
                                 </div>
@@ -322,18 +319,7 @@
                             </div><!-- /accordion-group -->
                             <br>
                             
-                            <div class="accordion-group">
-                                <div class="accordion-heading">
-                                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                                    <i class="fa fa-dashboard"></i> Automate business processes
-                                    </a>
-                                </div>
-                                <div id="collapseFour" class="accordion-body collapse">
-                                    <div class="accordion-inner">
-                                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                                    </div><!-- /accordion-inner -->
-                                </div><!-- /collapse -->
-                            </div><!-- /accordion-group -->
+                            
                             <br>            
                         </div><!-- /accordion -->
                     </div>
@@ -359,6 +345,88 @@
             </div><!-- /container -->
         </div><!-- /featureswrap -->
 
+<!-- Features Wrap -->
+        <section id="features" name="features"></section>
+        <div id="featureswrap">
+            <div class="container">
+                <div class="row">
+                    <h2 class="text-center">Features</h2>
+                    <hr>
+                    <br>
+                    <br>
+                    <div class="col-lg-6">
+                        <img class="img-responsive" src="/static/welcome/img/mobile.png" alt="">
+                    </div>
+                    
+                    <div class="col-lg-6">
+                        <br>
+                        <!-- Accordion -->
+                        <div class="accordion ac" id="accordion2">
+                            <div class="accordion-group active">
+                                <div class="accordion-heading">
+                                    <i class="fa fa-cloud"></i> Collaborate in the cloud
+                                    </a>
+                                </div><!-- /accordion-heading -->
+                                <div id="collapseOne" class="accordion-body collapse in">
+                                    <div class="accordion-inner">
+                                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                    </div><!-- /accordion-inner -->
+                                </div><!-- /collapse -->
+                            </div><!-- /accordion-group -->
+                            <br>
+
+                            <div class="accordion-group">
+                                <div class="accordion-heading">
+                                    <i class=""></i> Here start the secound paragraph>
+                                    </a>
+                                </div>
+                                <div id="collapseTwo" class="accordion-body collapse">
+                                    <div class="accordion-inner">
+                                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                    </div><!-- /accordion-inner -->
+                                </div><!-- /collapse -->
+                            </div><!-- /accordion-group -->
+                            <br>
+
+                            <div class="accordion-group">
+                                <div class="accordion-heading">
+                                    <i class="fa fa-bar-chart-o"></i> Deliver real time insights
+                                    </a>
+                                </div>
+                                <div id="collapseThree" class="accordion-body collapse">
+                                    <div class="accordion-inner">
+                                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                    </div><!-- /accordion-inner -->
+                                </div><!-- /collapse -->
+                            </div><!-- /accordion-group -->
+                            <br>
+                            
+                            
+                            <br>            
+                        </div><!-- /accordion -->
+                    </div>
+                </div><!-- /row -->
+                <br><br><br>
+                <div class="row">
+                    <h2 class="text-center">Multi Useful Components</h2>
+                    <hr><br><br>
+                    <div class="col-lg-6">
+                        <br><br>
+                        <h4><i class="fa fa-cogs"></i> Create customized business apps</h4>
+                        <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <br><br>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <img class="img-responsive" src="/static/welcome/img/tablet.png" alt="">
+                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
+            </div><!-- /container -->
+        </div><!-- /featureswrap -->
+        
 
         <!-- Divider 1 Section -->
         <div id="divider01">
