display status on Case show page
Former-commit-id: deb982c50df13e4fe25aceddacf8d071493457c0 [formerly ab8f15d84d450277de783105939131b134657875]
Former-commit-id: 0b1b1df744657c49519eb73bb05fcbc7559ef7ac

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -189,7 +189,7 @@
                           <label  class="required col-md-3 control-label">{{_("Status")}} </label>
                           <div class="col-md-9">
                                    <select class="form-control" ng-model="casee.current_status.name" ng-options="stat.status for stat in casesatuses" >
-                                       <option value="casee.current_status.name" ><%=casee.current_status.name%></option>
+                                       <option value="" ><%=casee.current_status.name%></option>
                                   </select>
 
                           </div>
