--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -60,7 +60,7 @@
 
                         <a class="tag ng-binding" href="/#/contacts/show/<%= opportunity.contact.id %>">
 
-                          <%= opportunity.contact.firstname %> <%= opportunity.contact.firstname %>
+                          <%= opportunity.contact.firstname %> <%= opportunity.contact.lastname %>
                         </a>
                       </span>
                   </div>
