--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -66,7 +66,7 @@
                   </div>
                   <span class="page-meta pull-right">
                     <i class="icon-pencil">
-                      <a ng-click="editaccount()" class="btn-link addAnotherPhone" data-toggle="modal">
+                      <a ng-click="editcase()" class="btn-link addAnotherPhone" data-toggle="modal">
                         Edit
                       </a>
                     </i>
@@ -544,10 +544,10 @@
                         <label  class="required col-md-3 control-label">{{_("Status")}} </label>
 
                         <div class="col-md-9">
-                          <select ng-model="status_selected" ng-options="stat.status for stat in casesatuses" class="form-control">
-                            <option value=""><%=casee.status%> </option>
-
-                          </select>
+                         
+                          <select class="form-control" ng-model="casee.current_status.name" ng-options="stat.status for stat in casesatuses" >
+                                       <option value="" ><%=casee.current_status.name%></option>
+                                  </select>
 
                         </div>
 
