updating the profile img on lead page
Former-commit-id: 581c5ae147900056d923c19c8fa56b6a1c749f07

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -45,7 +45,7 @@
               <div class="pic">
                   <img alt="<%= lead.firstname %> <%= lead.lastname %>" class=" img-responsive img-thumbnail" ng-src="<%=imageSrc%>">
               </div>
-               <a ng-show="showUpload" ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal" style="display: none;">
+               <a ng-show="showUpload" ng-click="createLogoPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal" style="display: none;">
                  <img src="/static/img/upload_logo.png">
                </a>
             </div>
