--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -81,8 +81,8 @@
               <div class="head">
                 <div class="pic">
                   <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">
-                    <img ng-hide="contact.profile_img_url"  class="img-responsive img-thumbnail contact-photo" src="/static/img/avatar_contact.jpg" >
-                    <img ng-show="contact.profile_img_url"  class="img-responsive img-thumbnail contact-photo" ng-src="https://docs.google.com/uc?id=<%= contact.profile_img_id %>" data-hasqtip="2">
+                    <img ng-hide="contact.profile_img_url"  class="contact-photo" src="/static/img/avatar_contact.jpg" >
+                    <img ng-show="contact.profile_img_url"  class="contact-photo" ng-src="https://docs.google.com/uc?id=<%= contact.profile_img_id %>" data-hasqtip="2">
                   </a>
                 </div>
                 <div class="text">
