--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -167,7 +167,7 @@
                           Or just add notes to remember what's important.
                           <br>
                         </p>
-                        <form id="addNote" ng-submit="addNote(note)" class="ng-pristine ng-valid">
+                        <form id="addNote" class="ng-pristine ng-valid">
                           <div class="form-group">
                             <input class="form-control ng-pristine ng-valid" autofocus="" type="text" placeholder="Add a new subject" id="messageSubject" ng-model="note.title">
                           </div>
@@ -175,7 +175,7 @@
                             <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="note.content"></textarea>
                           </div>
                           <div class="pull-right">
-                            <input ng-disabled="isLoading" type="submit" class="btn green" value="Add this note">
+                            <input ng-disabled="isLoading" ng-click="addNote(note)"  type="submit" class="btn green" value="Add this note">
                           </div>
                         </form>
                       </div>
@@ -510,7 +510,7 @@
 
                          <div class="btn-group relbutton">
 
-                                <button ng-click="test()" id="sample_editable_1_new" class="btn red">
+                                <button ng-click="addOppModal()()" id="sample_editable_1_new" class="btn red">
                                 Add opportunity
                                 </button>
                           </div>
@@ -900,7 +900,7 @@
               </div>
 
               <div class="modal-body">
-                 <form id="editAccount" name="editlead" ng-submit="updatAccountHeader(account)" class="form-horizontal">
+                 <form id="editAccount" name="editlead"  class="form-horizontal">
 
 
                   <div class="form-group">
@@ -933,7 +933,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                <button  type="submit" class="btn btn-primary addContactNow">{{_("Save")}} </button>
+                <button   ng-click="updatAccountHeader(account)" class="btn btn-primary addContactNow">{{_("Save")}} </button>
               </div>
                </form>
               </div>
@@ -1281,7 +1281,7 @@
                 <h3 id="myModalLabel" class="modal-title">{{_("Sharing Settings")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addMember" name="addaccount" ng-submit="share(slected_memeber)" class="form-horizontal">
+                 <form id="addMember" name="addaccount"  class="form-horizontal">
 
                     <p>{{ _("Who has access:") }}</p>
                     <div class="radio-list">
@@ -1323,7 +1323,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Share")}}</button>
+                <button  type="submit" ng-click="share(slected_memeber)" class="btn blue addContactNow">{{_("Share")}}</button>
               </div>
                </form>
                </div>
@@ -1386,7 +1386,7 @@
             </div>
             <div class="modal-body pickerin">
                      <div class="controls controls-row">
-                                          <form id="addTask" ng-submit="addTask(task)" class="ng-pristine ng-valid">
+                                        <form id="addTask"  class="ng-pristine ng-valid">
                                                   <input class="form-control" autofocus type="text" placeholder="Add a new task" id="taskTitle" ng-model="task.title">
 
                                                   <p><strong>{{_("When's it due?")}}</strong></p>
@@ -1399,8 +1399,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Add this task">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input ng-click="addTask(task)" type="submit" class="btn green" value="Add this task">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
 
             </form>
             </div>
@@ -1446,7 +1446,7 @@
                      <h3 id="myModalLabel" class="modal-title">{{_("New Opportunity")}}</h3>
                   </div>
                  <div class="modal-body">
-                     <form id="addOpportunity" name="addOpportunity" ng-submit="saveOpp(opportunity)" class="form-horizontal">
+                     <form id="addOpportunity" name="addOpportunity"  class="form-horizontal">
                      <fieldset>
                       <div class="form-group">
                           <label  class="required col-md-3 control-label">{{_("Name")}} *</label>
@@ -1484,7 +1484,7 @@
               </div>
                     <div class="modal-footer">
                      <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                      <button  type="submit" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
+                      <button  type="submit " ng-submit="saveOpp(opportunity)" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
                      </div>
                    </form>
                    </div>
@@ -1526,8 +1526,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="{{_('Add this event')}}" ng-click="addEvent(ioevent)">
-                <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
+               <input  type="submit" class="btn green" value="{{_('Add this event')}}" ng-click="addEvent(ioevent)">
+               
 
 
             </div>
