adding save bottom at the bottom of new account page
Former-commit-id: 45dd9bf75fdb84d64979c4c1a82dff3cdc9ffc21 [formerly 1086599fabaf87180c9dbb5de4557372c57bfefe]
Former-commit-id: fe10fde1fdff10f130b7780eb6640c4aa56544cc

--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -19,12 +19,6 @@
   </h2>
 </div>
   <div class=" subHeaderContent">
-            <div class="pull-right sharebuttonDiv"> 
-                  
-                  <button class="btn red jfk-button jfk-button-action" ng-click="save(account)">
-                    Create
-                  </button>
-            </div>
                   <h2 class="page-title">
             <a href="/#/accounts" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Accounts")}} > <%= account.name %>  </h2>
@@ -52,7 +46,7 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-       <div class="showPage slimForm col-md-9">
+       <div class="showPage slimForm col-md-9">             
                      <div class="row">
               <div class="col-md-12">
               <!-- BEGIN PORTLET-->
@@ -292,7 +286,14 @@
                           </div>
                           
                         </div>
-
+                        <div class="col-md-12">
+                        <div class="pull-right margin-bottom-15"> 
+                                
+                                <button class="btn red jfk-button jfk-button-action" ng-click="save(account)">
+                                  Create
+                                </button>
+                          </div>
+                      </div>
             </div>
        </div> 
 
