--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -6,10 +6,6 @@
     </h2>
   </div>
   <div class=" subHeaderContent">
-    <div class="pull-right sharebuttonDiv"> 
-      <a class="btn red jfk-button jfk-button-action" ng-click="save(contact)">
-        Create
-      </a>
     </div>
     <h2 class="page-title">
       <a href="/#/contacts" data-toggle="tooltip" data-placement="bottom" title="Back to contacts">
@@ -46,6 +42,16 @@
       <div class="row">
         <div class="col-md-12">
           <div class="row">
+            <div class="col-md-12 margin-bottom-15">
+
+                <div class="pull-right"> 
+                        
+                        <button class="btn red jfk-button jfk-button-action" ng-click="save(contact)">
+                          Create
+                        </button>
+                  </div>
+
+            </div>
             <div class="col-md-3">
               <div class="portlet">
                 <div class="portlet-body left-sidebar" id="chats">
