--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -182,24 +182,6 @@
               </div>
             </div>
           </div>
-          <div ng-show="blankStateaccount" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
-            <div class="dashboard-stat cards">
-              <div class="blank_slate_arrow"></div>
-                <div class="thumbnail blank_slate_body">
-                  <img class="img-responsive" src="/static/img/accounts_blank.png">
-                    <p class="lead">{{ _('Accounts  pages includes a detailed page for each customer, partner, or investor in your ecosystem. You and your co-workers can collaborate to get a deep understanding.') }}
-                    </p>
-                </div>
-            </div>
-          </div>
-          <div ng-show="isFiltering * !accounts" data-span="all" class="" data-tablet="span6" data-desktop="span12">
-            <div class="dashboard-stat cards" >
-              <div class="blank_slate_arrow"></div>
-              <div class="thumbnail blank_slate_body">
-                <p class="lead">{{ _('No results found, try with another filter') }}</p>
-              </div>
-            </div>
-          </div>
           <div class="clearfix"></div>
         </div><!--/inner-cards-container-->
         <!--$Blank state-->
@@ -212,6 +194,17 @@
                 <p class="lead">
                   {{ _('Accounts  pages includes a detailed page for each customer, partner, or investor in your ecosystem. You and your co-workers can collaborate to get a deep understanding.') }}
                 </p>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div><!--/inner-cards-container-->
+         <div ng-show="isFiltering * !accounts"  class="col-md-12 " ng-show="blankStateaccount">
+          <div  data-span="3" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
+            <div class="">
+              <div class="blank_slate_arrow"></div>
+              <div class="thumbnail blank_slate_body">
+                <p class="lead">{{ _('No results found, try with another filter') }}</p>
               </div>
             </div>
           </div>
