--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -120,14 +120,6 @@
               </div>
             </div>
           </div>
-          <div ng-show="isFiltering * !contacts" data-span="all" class="" data-tablet="span6" data-desktop="span12">
-            <div class="dashboard-stat cards">
-              <div class="blank_slate_arrow"></div>
-              <div class="thumbnail blank_slate_body">
-                <p class="lead">No results found, try with another filter</p>
-              </div>
-            </div>
-          </div>
           <div class="clearfix"></div>
         </div><!--innercardcontaine-->
         <!--$Blank state-->
@@ -140,6 +132,17 @@
                 <p class="lead">
                   {{ _('Each contact gets a page in i/oGrow. You and your co-workers can add notes from calls,conversations, meetings, or any other historic information about this person.') }}
                 </p>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div><!--/inner-cards-container-->
+        <div ng-show="isFiltering * !contacts"  class="col-md-12 " ng-show="blankStateaccount">
+          <div  data-span="3" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
+            <div class="">
+              <div class="blank_slate_arrow"></div>
+              <div class="thumbnail blank_slate_body">
+                <p class="lead">{{ _('No results found, try with another filter') }}</p>
               </div>
             </div>
           </div>
