--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -121,15 +121,6 @@
             </div>
           </div>
         </div>
-
-        <div ng-show="isFiltering * !leads" data-span="all" class="" data-tablet="span6" data-desktop="span12">
-          <div class="dashboard-stat cards" >
-            <div class="blank_slate_arrow"></div>
-            <div class="thumbnail blank_slate_body">
-              <p class="lead">{{ _('No results found, try with another filter') }}</p>
-            </div>
-          </div>
-        </div>
         <div class="clearfix"></div>
       </div><!--/inner-cards-container-->
       <!--$Blank state-->
@@ -147,6 +138,17 @@
         </div>
         <div class="clearfix"></div>
       </div><!--/inner-cards-container-->
+      <div ng-show="isFiltering * !leads"  class="col-md-12 " ng-show="blankStateaccount">
+          <div  data-span="3" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
+            <div class="">
+              <div class="blank_slate_arrow"></div>
+              <div class="thumbnail blank_slate_body">
+                <p class="lead">{{ _('No results found, try with another filter') }}</p>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div><!--/inner-cards-container-->
       </div>
       </div>
     </div>
