--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -171,7 +171,7 @@
                           Or just add notes to remember what's important.
                           <br>
                         </p>
-                        <form id="addNote" ng-submit="addNote(note)" class="ng-pristine ng-valid">
+                        <form id="addNote"  class="ng-pristine ng-valid">
                           <div class="form-group">   
                             <input class="form-control ng-pristine ng-valid" autofocus="" type="text" placeholder="Add a new subject" id="messageSubject" ng-model="note.title">
                           </div>
@@ -179,7 +179,7 @@
                             <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="note.content"></textarea>                
                           </div>                         
                           <div class="pull-right">
-                            <input ng-disabled="isLoading" type="submit" class="btn green" value="Add this note">
+                            <input ng-disabled="isLoading" ng-click="addNote(note)" type="submit" class="btn green" value="Add this note">
                           </div>
                         </form>
                       </div>
@@ -936,7 +936,7 @@
               </div>
 
               <div class="modal-body">
-                 <form id="editAccount" name="editlead" ng-submit="updatecontact(contact)" class="form-horizontal"> 
+                 <form id="editAccount" name="editlead"  class="form-horizontal"> 
                 
 
                   <div class="form-group">
@@ -979,7 +979,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                <button  type="submit" class="btn btn-primary addContactNow">{{_("Save")}} </button>
+                <button  type="submit" ng-click="updatecontact(contact)" class="btn btn-primary addContactNow">{{_("Save")}} </button>
               </div>
                </form>
                </div>
@@ -1457,7 +1457,7 @@
             </div>
             <div class="modal-body pickerin">
                      <div class="controls controls-row">
-                                          <form id="addTask" ng-submit="addTask(task)" class="ng-pristine ng-valid">
+                                          <form id="addTask"  class="ng-pristine ng-valid">
                                                   <input class="form-control" autofocus type="text" placeholder="Add a new task" id="taskTitle" ng-model="task.title">
                                                   
                                                   <p><strong>{{_("When's it due?")}}</strong></p>
@@ -1470,8 +1470,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
               
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Add this task">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input ng-hide="isLoading" type="submit" ng-click="addTask(task)" class="btn green" value="Add this task">
+             
                                         
             </form>
             </div>
@@ -1517,7 +1517,7 @@
                      <h3 id="myModalLabel" class="modal-title">{{_("New Opportunity")}}</h3>
                   </div>
                  <div class="modal-body">
-                     <form id="addOpportunity" name="addOpportunity" ng-submit="saveOpp(opportunity)" class="form-horizontal"> 
+                     <form id="addOpportunity" name="addOpportunity"  class="form-horizontal"> 
                      <fieldset>
                       <div class="form-group">
                           <label  class="required col-md-3 control-label">{{_("Name")}} *</label>
@@ -1555,7 +1555,7 @@
               </div>
                     <div class="modal-footer">
                      <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                      <button  type="submit" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
+                      <button  type="submit"  ng-click="saveOpp(opportunity)" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
                      </div>
                    </form>
                    </div>
@@ -1572,7 +1572,7 @@
                 <h3 id="myModalLabel" class="modal-title">{{_("New Case")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addCase" name="addCase" ng-submit="saveCase(casee)" class="form-horizontal"> 
+                 <form id="addCase" name="addCase"  class="form-horizontal"> 
                 
                   
                     
@@ -1633,7 +1633,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn green addContactNow">{{_("Add Case")}}</button>
+                <button  type="submit" ng-click="saveCase(casee)" class="btn green addContactNow">{{_("Add Case")}}</button>
               </div>
                </form>
                </div>
